--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "private": true,
   "scripts": {
     "gh-publish": "node gh-publish.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "deploy": "gh-pages -d build",
+    "eject": "react-scripts eject"
   },
   "repository": {
     "type": "git",
@@ -14,6 +18,28 @@
   },
   "dependencies": {
     "fs-extra": "^9.0.1",
-    "gh-pages": "^3.1.0"
+    "gh-pages": "^3.1.0",
+    "react": "^17.0.2",
+    "react-cv": "^1.2.0",
+    "react-dom": "^17.0.2",
+    "react-scripts": "^5.0.0"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
