--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "dependencies": {
     "fs-extra": "^10.1.0",
-    "gh-pages": "^3.2.3",
+    "gh-pages": "5.0.0",
     "react": "^17.0.2",
     "react-cv": "^1.2.0",
     "react-dom": "^17.0.2",
